Increase hero dash margin to prevent overlap with text

--- a/src/index.css
+++ b/src/index.css
@@ -1126,7 +1126,7 @@ a {
   width: 32px;
   vertical-align: middle;
   opacity: 0.3;
-  margin: 0 var(--space-3);
+  margin: 0 var(--space-4);
   font-weight: 300;
 }
 
